--- a/package.json
+++ b/package.json
@@ -1,1 +1,11 @@
-package.json
+{
+  "name": "bryj-app",
+  "version": "1.0.0",
+  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {},
+  "devDependencies": {}
+}
